Added graalvm plugin